--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li>
-            <a href="recipes/Pad-Krapow.html">Pad Krapow</a>
-        </li>
-        <li>
-            <a href="recipes/cinnabuns.html">Cinnamon rolls</a>
-        </li>
-        <li>
-            <a href="recipes/breadroll.html">Bread roll</a>
-        </li>
-    </ul>
+    <h1 class="Header">Odin Recipes</h1>
+    <img src="images/streetfood.gif"  class="wok" >
+        <ul class="list">
+    <li><a href="recipes/Pad-Krapow.html"><button class="button">Pad Krapow</button></a></li>
+    <li><a href="recipes/cinnabuns.html"><button class="button">Cinnamon rolls</button></a></li>
+    <li><a href="recipes/breadroll.html"><button class="button">Bread roll</button></a></li>
+</ul>
 </body>
 </html>
