Added CSS to recipes

--- a/recipes/breadroll.html
+++ b/recipes/breadroll.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bread roll</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Bread Roll</h1>
+    <h1 class="Header">Bread Roll</h1>
     <img src="../images/breadroll.jpg">
     <h2>About the bread roll</h2>
     <p>Classic Swedish kiosk dish. Weird but surprisingly good tasting.</p>
