--- a/recipes/cinnabuns.html
+++ b/recipes/cinnabuns.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinnamon rolls</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-   <h1>Cinnamon Rolls</h1> 
+   <h1 class="Header">Cinnamon Rolls</h1> 
    <img src="../images/cinnabuns.jpg" alt="Pile of cinnamon buns straight out of the oven.">
    <h2>About cinnamon rolls</h2>
    <p>They're tasty. You should definitely taste them. Get some milk or coffee to enjoy them with.</p>
