--- a/recipes/Pad-Krapow.html
+++ b/recipes/Pad-Krapow.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pad Krapow Gai</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Pad Krapow Gai (ผัดกระเพราไก่)</h1>
+    <h1 class="Header">Pad Krapow Gai (ผัดกระเพราไก่)</h1>
     <img src="../images/Dish.webp" alt="Photo of the dish Pad Krapow with a beautiful sunny side up egg.
     ">
     <h2>About Pad Krapow</h2>
